Simplificar despliegue frontend Railway: eliminar Docker, configurar backend privado

--- a/.env.production
+++ b/.env.production
@@ -6,9 +6,9 @@
 NODE_ENV=production
 NEXT_PUBLIC_ENV=production
 
-# 🔗 API URLs
-NEXT_PUBLIC_API_URL=https://api.your-domain.com
-NEXT_PUBLIC_WEBSOCKET_URL=wss://api.your-domain.com
+# 🔗 API URLs - Railway Private Network
+NEXT_PUBLIC_API_URL=http://backfprax.railway.internal
+NEXT_PUBLIC_WEBSOCKET_URL=ws://backfprax.railway.internal
 
 # 🔐 AUTENTICACIÓN
 NEXT_PUBLIC_JWT_STORAGE_KEY=ausb_auth_token
@@ -17,12 +17,12 @@ NEXT_PUBLIC_JWT_STORAGE_KEY=ausb_auth_token
 NEXT_PUBLIC_DEFAULT_LOCALE=es
 NEXT_PUBLIC_SUPPORTED_LOCALES=es,en
 
-# 📊 ANALYTICS (opcional)
-NEXT_PUBLIC_GA_ID=your_google_analytics_id
-NEXT_PUBLIC_HOTJAR_ID=your_hotjar_id
+# 📊 ANALYTICS (opcional - deshabilitado en Railway)
+# NEXT_PUBLIC_GA_ID=your_google_analytics_id
+# NEXT_PUBLIC_HOTJAR_ID=your_hotjar_id
 
 # 🔒 SEGURIDAD
-NEXT_PUBLIC_ALLOWED_DOMAINS=your-domain.com,www.your-domain.com
+NEXT_PUBLIC_ALLOWED_DOMAINS=fprax.com,www.fprax.com
 
 # 🚀 PERFORMANCE
 NEXT_PUBLIC_CACHE_MAX_AGE=3600
