--- a/.env.production
+++ b/.env.production
@@ -6,9 +6,9 @@
 NODE_ENV=production
 NEXT_PUBLIC_ENV=production
 
-# 🔗 API URLs - Railway Private Network
-NEXT_PUBLIC_API_URL=http://backfprax.railway.internal
-NEXT_PUBLIC_WEBSOCKET_URL=ws://backfprax.railway.internal
+# 🔗 API URLs - Railway Public HTTPS
+NEXT_PUBLIC_API_URL=https://backfprax-production.up.railway.app
+NEXT_PUBLIC_WEBSOCKET_URL=wss://backfprax-production.up.railway.app
 
 # 🔐 AUTENTICACIÓN
 NEXT_PUBLIC_JWT_STORAGE_KEY=ausb_auth_token
